--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,18 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
-        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
             <version>3.0.1</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-json -->
+        <dependency>
+            <groupId>com.typesafe.play</groupId>
+            <artifactId>play-json_2.11</artifactId>
+            <version>2.6.9</version>
         </dependency>
     </dependencies>
 
